--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                                 </div>
                             
                                 <div class="text-sm leading-5">
-                                    <a href="forgot-password.html" class="font-medium text-primary hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                                    <a href="forgot-password.html" class="font-medium text-primary focus:outline-none focus:underline transition ease-in-out duration-150">
                                         Forgot your password?
                                     </a>
                                 </div>
